# every-occt

./: .gitignore  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
src/: Common.py  applyPatches.py  bindings.py  buildFromYaml.py  compileBindings.py  compileSources.py  customBuildSchema.py  generateBindings.py  parallelProgress.py  parser.py
src/filter/: filterClasses.py  filterEnums.py  filterMethodOrProperties.py
src/wasmGenerator/: Common.py
