[project]
name = "every-occt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse==1.4.0",
    "cerberus==1.3.7",
    "clang==20.1.0",
    "joblib==1.4.2",
    "plumbum==1.9.0",
    "pygccxml==3.0.2",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "pyyaml==6.0.2",
    "ray==2.44.1",
    "rich==13.9.4",
    "ruff>=0.11.6",
    "typeguard==4.4.2",
]
